# graphyx_playground

./: CMakeLists.txt  Readme.md
include/: Boids.hpp  Simulation.hpp  kernels.hpp
kernels/: hash.cu  physc.cu
shaders/: boid.fs  boid.gs  boid.vs  boid_fs.glsl  boid_gs.glsl  boid_hash.glsl  boid_physx.glsl  boid_vs.glsl
src/: main.cpp
src/Boids/: Boids.cpp  Simulation.cpp
